force-app/main/default/objects/ClassesScheduleTimes__mdt/ClassesScheduleTimes__mdt.object-meta.xml
<CustomObject>
    <label>Class Schedule Time</label>
    <pluralLabel>Class Schedule Times</pluralLabel>
</CustomObject>