force-app/main/default/objects/ClassesScheduleTimes__mdt/validationRules/VR01_Order_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_Order_Number</fullName>
    <active>true</active>
    <errorConditionFormula>OrderNumber__c &lt; 1</errorConditionFormula>
    <errorDisplayField>OrderNumber__c</errorDisplayField>
    <errorMessage>Order Number should be positive</errorMessage>
</ValidationRule>